--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Discover the best food & drinks</h1>
+            <h1>Discover the best food & drinks In Parnik zomato App</h1>
             <div class="search-container">
                 <div class="location-selector">
                     <i class="fas fa-map-marker-alt"></i>
